tests/baselines/reference/parserMemberFunctionDeclaration5.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration5.ts(2,5): error TS1031: 'declare' modifier cannot appear on a class element.
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration5.ts(2,13): error TS2611: Ambient property declarations must override a property in a base class.


==== tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration5.ts (2 errors) ====
    class C {
        declare Foo() { }
        ~~~~~~~
!!! error TS1031: 'declare' modifier cannot appear on a class element.
                ~~~
!!! error TS2611: Ambient property declarations must override a property in a base class.
    }